tests/baselines/reference/shorthandPropertyAssignmentInES6Module.errors.txt
tests/cases/compiler/test.ts(2,19): error TS2792: Cannot find module './missingModule'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?


==== tests/cases/compiler/existingModule.ts (0 errors) ====
    export var x = 1;
    
==== tests/cases/compiler/test.ts (1 errors) ====
    import {x} from './existingModule';
    import {foo} from './missingModule';
                      ~~~~~~~~~~~~~~~~~
!!! error TS2792: Cannot find module './missingModule'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
    
    declare function use(a: any): void;
    
    const test = { x, foo };
    
    use(x);
    use(foo);